orderlyjson/OrderlyJSONParser.py
# $ANTLR 3.2 Sep 23, 2009 12:02:23 OrderlyJSON.g 2010-06-22 19:12:36

import sys
from antlr3 import *
from antlr3.compat import set, frozenset
         
import sys
import traceback
from orderly_json import Prefix, Entry, Suffix

from OrderlyJSONLexer import OrderlyJSONLexer



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
INTEGER=10
T__29=29
T__28=28
T__27=27
T__26=26
T__25=25
T__24=24
T__23=23
ESC=16
T__22=22
PROPERTY_NAME_TOKEN=9
T__21=21
T__20=20
EOF=-1
FRAC=11
QUOTE_OR_BACKSLASH_OR_CONTROL_CHARACTER=14
T__19=19
T__30=30
T__31=31
T__32=32
WS=4
T__33=33
T__34=34
T__35=35
T__18=18
T__36=36
T__17=17
EXP=12
T__37=37
HEX=15
T__38=38
OPTIONAL_ADDITIONAL_MARKER=6
COMMENT=5
STRING=13
OPTIONAL_OPTIONAL_MARKER=8
OPTIONAL_PERL_REGEX=7

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "WS", "COMMENT", "OPTIONAL_ADDITIONAL_MARKER", "OPTIONAL_PERL_REGEX", 
    "OPTIONAL_OPTIONAL_MARKER", "PROPERTY_NAME_TOKEN", "INTEGER", "FRAC", 
    "EXP", "STRING", "QUOTE_OR_BACKSLASH_OR_CONTROL_CHARACTER", "HEX", "ESC", 
    "';'", "'integer'", "'number'", "'boolean'", "'null'", "'any'", "'array'", 
    "'{'", "'}'", "'['", "']'", "'object'", "'union'", "'string'", "','", 
    "'`'", "'<'", "'>'", "'='", "':'", "'true'", "'false'"
]




class OrderlyJSONParser(Parser):
    grammarFileName = "OrderlyJSON.g"
    antlr_version = version_str_to_tuple("3.2 Sep 23, 2009 12:02:23")
    antlr_version_str = "3.2 Sep 23, 2009 12:02:23"
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super(OrderlyJSONParser, self).__init__(input, state, *args, **kwargs)






                


        



    # $ANTLR start "orderly_schema"
    # OrderlyJSON.g:33:1: orderly_schema returns [result] : (e= unnamed_entries )? ( ';' )? ;
    def orderly_schema(self, ):

        result = None

        e = None


        try:
            try:
                # OrderlyJSON.g:33:33: ( (e= unnamed_entries )? ( ';' )? )
                # OrderlyJSON.g:33:35: (e= unnamed_entries )? ( ';' )?
                pass 
                # OrderlyJSON.g:33:36: (e= unnamed_entries )?
                alt1 = 2
                LA1_0 = self.input.LA(1)

                if ((18 <= LA1_0 <= 23) or (28 <= LA1_0 <= 30)) :
                    alt1 = 1
                if alt1 == 1:
                    # OrderlyJSON.g:33:36: e= unnamed_entries
                    pass 
                    self._state.following.append(self.FOLLOW_unnamed_entries_in_orderly_schema97)
                    e = self.unnamed_entries()

                    self._state.following.pop()



                # OrderlyJSON.g:33:54: ( ';' )?
                alt2 = 2
                LA2_0 = self.input.LA(1)

                if (LA2_0 == 17) :
                    alt2 = 1
                if alt2 == 1:
                    # OrderlyJSON.g:33:54: ';'
                    pass 
                    self.match(self.input, 17, self.FOLLOW_17_in_orderly_schema100)



                #action start
                result = e
                #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass
        return result

    # $ANTLR end "orderly_schema"


    # $ANTLR start "named_entries"
    # OrderlyJSON.g:35:1: named_entries returns [result] : e= named_entry ( ';' e2= named_entry )* ;
    def named_entries(self, ):

        result = None

        e = None

        e2 = None


               
        result = []

        try:
            try:
                # OrderlyJSON.g:38:2: (e= named_entry ( ';' e2= named_entry )* )
                # OrderlyJSON.g:39:3: e= named_entry ( ';' e2= named_entry )*
                pass 
                self._state.following.append(self.FOLLOW_named_entry_in_named_entries123)
                e = self.named_entry()

                self._state.following.pop()
                # OrderlyJSON.g:39:17: ( ';' e2= named_entry )*
                while True: #loop3
                    alt3 = 2
                    LA3_0 = self.input.LA(1)

                    if (LA3_0 == 17) :
                        LA3_1 = self.input.LA(2)

                        if ((18 <= LA3_1 <= 23) or (28 <= LA3_1 <= 30)) :
                            alt3 = 1




                    if alt3 == 1:
                        # OrderlyJSON.g:40:5: ';' e2= named_entry
                        pass 
                        self.match(self.input, 17, self.FOLLOW_17_in_named_entries131)
                        self._state.following.append(self.FOLLOW_named_entry_in_named_entries135)
                        e2 = self.named_entry()

                        self._state.following.pop()
                        #action start
                        result.append(e2) 
                        #action end


                    else:
                        break #loop3
                #action start
                result = [e] + result 
                #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass
        return result

    # $ANTLR end "named_entries"


    # $ANTLR start "unnamed_entries"
    # OrderlyJSON.g:43:1: unnamed_entries returns [result] : e= unnamed_entry ( ';' e2= unnamed_entry )* ;
    def unnamed_entries(self, ):

        result = None

        e = None

        e2 = None


               
        result = [];

        try:
            try:
                # OrderlyJSON.g:46:2: (e= unnamed_entry ( ';' e2= unnamed_entry )* )
                # OrderlyJSON.g:47:3: e= unnamed_entry ( ';' e2= unnamed_entry )*
                pass 
                self._state.following.append(self.FOLLOW_unnamed_entry_in_unnamed_entries164)
                e = self.unnamed_entry()

                self._state.following.pop()
                # OrderlyJSON.g:47:19: ( ';' e2= unnamed_entry )*
                while True: #loop4
                    alt4 = 2
                    LA4_0 = self.input.LA(1)

                    if (LA4_0 == 17) :
                        LA4_1 = self.input.LA(2)

                        if ((18 <= LA4_1 <= 23) or (28 <= LA4_1 <= 30)) :
                            alt4 = 1




                    if alt4 == 1:
                        # OrderlyJSON.g:48:6: ';' e2= unnamed_entry
                        pass 
                        self.match(self.input, 17, self.FOLLOW_17_in_unnamed_entries173)
                        self._state.following.append(self.FOLLOW_unnamed_entry_in_unnamed_entries177)
                        e2 = self.unnamed_entry()

                        self._state.following.pop()
                        #action start
                        result.append(e2); 
                        #action end


                    else:
                        break #loop4
                #action start
                result = [e] + result 
                #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass
        return result

    # $ANTLR end "unnamed_entries"


    # $ANTLR start "named_entry"
    # OrderlyJSON.g:51:1: named_entry returns [result] : ( (pref= definition_prefix name= property_name suff= definition_suffix ) | (pref= string_prefix name= property_name suff= string_suffix ) );
    def named_entry(self, ):

        result = None

        pref = None

        name = None

        suff = None


        try:
            try:
                # OrderlyJSON.g:52:3: ( (pref= definition_prefix name= property_name suff= definition_suffix ) | (pref= string_prefix name= property_name suff= string_suffix ) )
                alt5 = 2
                LA5_0 = self.input.LA(1)

                if ((18 <= LA5_0 <= 23) or (28 <= LA5_0 <= 29)) :
                    alt5 = 1
                elif (LA5_0 == 30) :
                    alt5 = 2
                else:
                    nvae = NoViableAltException("", 5, 0, self.input)

                    raise nvae

                if alt5 == 1:
                    # OrderlyJSON.g:52:6: (pref= definition_prefix name= property_name suff= definition_suffix )
                    pass 
                    # OrderlyJSON.g:52:6: (pref= definition_prefix name= property_name suff= definition_suffix )
                    # OrderlyJSON.g:52:7: pref= definition_prefix name= property_name suff= definition_suffix
                    pass 
                    self._state.following.append(self.FOLLOW_definition_prefix_in_named_entry204)
                    pref = self.definition_prefix()

                    self._state.following.pop()
                    self._state.following.append(self.FOLLOW_property_name_in_named_entry208)
                    name = self.property_name()

                    self._state.following.pop()
                    self._state.following.append(self.FOLLOW_definition_suffix_in_named_entry212)
                    suff = self.definition_suffix()

                    self._state.following.pop()



                    #action start
                    result = Entry(pref, name, suff); 
                    #action end


                elif alt5 == 2:
                    # OrderlyJSON.g:53:6: (pref= string_prefix name= property_name suff= string_suffix )
                    pass 
                    # OrderlyJSON.g:53:6: (pref= string_prefix name= property_name suff= string_suffix )
                    # OrderlyJSON.g:53:7: pref= string_prefix name= property_name suff= string_suffix
                    pass 
                    self._state.following.append(self.FOLLOW_string_prefix_in_named_entry225)
                    pref = self.string_prefix()

                    self._state.following.pop()
                    self._state.following.append(self.FOLLOW_property_name_in_named_entry229)
                    name = self.property_name()

                    self._state.following.pop()
                    self._state.following.append(self.FOLLOW_string_suffix_in_named_entry233)
                    suff = self.string_suffix()

                    self._state.following.pop()



                    #action start
                    result = Entry(pref, name, suff); 
                    #action end



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass
        return result

    # $ANTLR end "named_entry"


    # $ANTLR start "unnamed_entry"
    # OrderlyJSON.g:56:1: unnamed_entry returns [result] : (pref= definition_prefix suff= definition_suffix | pref= string_prefix suff= string_suffix );
    def unnamed_entry(self, ):

        result = None

        pref = None

        suff = None


        try:
            try:
                # OrderlyJSON.g:57:3: (pref= definition_prefix suff= definition_suffix | pref= string_prefix suff= string_suffix )
                alt6 = 2
                LA6_0 = self.input.LA(1)

                if ((18 <= LA6_0 <= 23) or (28 <= LA6_0 <= 29)) :
                    alt6 = 1
                elif (LA6_0 == 30) :
                    alt6 = 2
                else:
                    nvae = NoViableAltException("", 6, 0, self.input)

                    raise nvae

                if alt6 == 1:
                    # OrderlyJSON.g:57:6: pref= definition_prefix suff= definition_suffix
                    pass 
                    self._state.following.append(self.FOLLOW_definition_prefix_in_unnamed_entry264)
                    pref = self.definition_prefix()

                    self._state.following.pop()
                    self._state.following.append(self.FOLLOW_definition_suffix_in_unnamed_entry268)
                    suff = self.definition_suffix()

                    self._state.following.pop()
                    #action start
                    result = Entry(pref, None, suff) 
                    #action end


                elif alt6 == 2:
                    # OrderlyJSON.g:58:6: pref= string_prefix suff= string_suffix
                    pass 
                    self._state.following.append(self.FOLLOW_string_prefix_in_unnamed_entry280)
                    pref = self.string_prefix()

                    self._state.following.pop()
                    self._state.following.append(self.FOLLOW_string_suffix_in_unnamed_entry284)
                    suff = self.string_suffix()

                    self._state.following.pop()
                    #action start
                    result = Entry(pref, None, suff) 
                    #action end



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass
        return result

    # $ANTLR end "unnamed_entry"


    # $ANTLR start "definition_prefix"
    # OrderlyJSON.g:61:1: definition_prefix returns [result] : ( 'integer' (rng= optional_range )? | 'number' (rng= optional_range )? | 'boolean' | 'null' | 'any' | 'array' ( ( '{' (e= unnamed_entries )? ( ';' )? '}' (o= OPTIONAL_ADDITIONAL_MARKER )? (rng= optional_range )? ) | ( '[' (e= unnamed_entry )? ( ';' )? ']' (rng= optional_range )? ) ) | 'object' '{' (e= named_entries )? ( ';' )? '}' (o= OPTIONAL_ADDITIONAL_MARKER )? | 'union' '{' (e= unnamed_entries )? ( ';' )? '}' );
    def definition_prefix(self, ):

        result = None

        o = None
        rng = None

        e = None


        try:
            try:
                # OrderlyJSON.g:62:3: ( 'integer' (rng= optional_range )? | 'number' (rng= optional_range )? | 'boolean' | 'null' | 'any' | 'array' ( ( '{' (e= unnamed_entries )? ( ';' )? '}' (o= OPTIONAL_ADDITIONAL_MARKER )? (rng= optional_range )? ) | ( '[' (e= unnamed_entry )? ( ';' )? ']' (rng= optional_range )? ) ) | 'object' '{' (e= named_entries )? ( ';' )? '}' (o= OPTIONAL_ADDITIONAL_MARKER )? | 'union' '{' (e= unnamed_entries )? ( ';' )? '}' )
                alt22 = 8
                LA22 = self.input.LA(1)
                if LA22 == 18:
                    alt22 = 1
                elif LA22 == 19:
                    alt22 = 2
                elif LA22 == 20:
                    alt22 = 3
                elif LA22 == 21:
                    alt22 = 4
                elif LA22 == 22:
                    alt22 = 5
                elif LA22 == 23:
                    alt22 = 6
                elif LA22 == 28:
                    alt22 = 7
                elif LA22 == 29:
                    alt22 = 8
                else:
                    nvae = NoViableAltException("", 22, 0, self.input)

                    raise nvae

                if alt22 == 1:
                    # OrderlyJSON.g:62:6: 'integer' (rng= optional_range )?
                    pass 
                    self.match(self.input, 18, self.FOLLOW_18_in_definition_prefix313)
                    # OrderlyJSON.g:62:19: (rng= optional_range )?
                    alt7 = 2
                    LA7_0 = self.input.LA(1)

                    if (LA7_0 == 24) :
                        alt7 = 1
                    if alt7 == 1:
                        # OrderlyJSON.g:62:19: rng= optional_range
                        pass 
                        self._state.following.append(self.FOLLOW_optional_range_in_definition_prefix317)
                        rng = self.optional_range()

                        self._state.following.pop()



                    #action start
                    result = Prefix('integer', rng=('rng' in locals() and rng)) 
                    #action end


                elif alt22 == 2:
                    # OrderlyJSON.g:63:6: 'number' (rng= optional_range )?
                    pass 
                    self.match(self.input, 19, self.FOLLOW_19_in_definition_prefix386)
                    # OrderlyJSON.g:63:18: (rng= optional_range )?
                    alt8 = 2
                    LA8_0 = self.input.LA(1)

                    if (LA8_0 == 24) :
                        alt8 = 1
                    if alt8 == 1:
                        # OrderlyJSON.g:63:18: rng= optional_range
                        pass 
                        self._state.following.append(self.FOLLOW_optional_range_in_definition_prefix390)
                        rng = self.optional_range()

                        self._state.following.pop()



                    #action start
                    result = Prefix('number', rng=('rng' in locals() and rng))  
                    #action end


                elif alt22 == 3:
                    # OrderlyJSON.g:64:6: 'boolean'
                    pass 
                    self.match(self.input, 20, self.FOLLOW_20_in_definition_prefix460)
                    #action start
                    result = Prefix('boolean')
                    #action end


                elif alt22 == 4:
                    # OrderlyJSON.g:65:6: 'null'
                    pass 
                    self.match(self.input, 21, self.FOLLOW_21_in_definition_prefix548)
                    #action start
                    result = Prefix('null')
                    #action end


                elif alt22 == 5:
                    # OrderlyJSON.g:66:6: 'any'
                    pass 
                    self.match(self.input, 22, self.FOLLOW_22_in_definition_prefix639)
                    #action start
                    result = Prefix('any')
                    #action end


                elif alt22 == 6:
                    # OrderlyJSON.g:67:6: 'array' ( ( '{' (e= unnamed_entries )? ( ';' )? '}' (o= OPTIONAL_ADDITIONAL_MARKER )? (rng= optional_range )? ) | ( '[' (e= unnamed_entry )? ( ';' )? ']' (rng= optional_range )? ) )
                    pass 
                    self.match(self.input, 23, self.FOLLOW_23_in_definition_prefix731)
                    # OrderlyJSON.g:67:14: ( ( '{' (e= unnamed_entries )? ( ';' )? '}' (o= OPTIONAL_ADDITIONAL_MARKER )? (rng= optional_range )? ) | ( '[' (e= unnamed_entry )? ( ';' )? ']' (rng= optional_range )? ) )
                    alt16 = 2
                    LA16_0 = self.input.LA(1)

                    if (LA16_0 == 24) :
                        alt16 = 1
                    elif (LA16_0 == 26) :
                        alt16 = 2
                    else:
                        nvae = NoViableAltException("", 16, 0, self.input)

                        raise nvae

                    if alt16 == 1:
                        # OrderlyJSON.g:68:7: ( '{' (e= unnamed_entries )? ( ';' )? '}' (o= OPTIONAL_ADDITIONAL_MARKER )? (rng= optional_range )? )
                        pass 
                        # OrderlyJSON.g:68:7: ( '{' (e= unnamed_entries )? ( ';' )? '}' (o= OPTIONAL_ADDITIONAL_MARKER )? (rng= optional_range )? )
                        # OrderlyJSON.g:68:8: '{' (e= unnamed_entries )? ( ';' )? '}' (o= OPTIONAL_ADDITIONAL_MARKER )? (rng= optional_range )?
                        pass 
                        self.match(self.input, 24, self.FOLLOW_24_in_definition_prefix742)
                        # OrderlyJSON.g:68:13: (e= unnamed_entries )?
                        alt9 = 2
                        LA9_0 = self.input.LA(1)

                        if ((18 <= LA9_0 <= 23) or (28 <= LA9_0 <= 30)) :
                            alt9 = 1
                        if alt9 == 1:
                            # OrderlyJSON.g:68:13: e= unnamed_entries
                            pass 
                            self._state.following.append(self.FOLLOW_unnamed_entries_in_definition_prefix746)
                            e = self.unnamed_entries()

                            self._state.following.pop()



                        # OrderlyJSON.g:68:31: ( ';' )?
                        alt10 = 2
                        LA10_0 = self.input.LA(1)

                        if (LA10_0 == 17) :
                            alt10 = 1
                        if alt10 == 1:
                            # OrderlyJSON.g:68:31: ';'
                            pass 
                            self.match(self.input, 17, self.FOLLOW_17_in_definition_prefix749)



                        self.match(self.input, 25, self.FOLLOW_25_in_definition_prefix752)
                        # OrderlyJSON.g:68:41: (o= OPTIONAL_ADDITIONAL_MARKER )?
                        alt11 = 2
                        LA11_0 = self.input.LA(1)

                        if (LA11_0 == OPTIONAL_ADDITIONAL_MARKER) :
                            alt11 = 1
                        if alt11 == 1:
                            # OrderlyJSON.g:68:41: o= OPTIONAL_ADDITIONAL_MARKER
                            pass 
                            o=self.match(self.input, OPTIONAL_ADDITIONAL_MARKER, self.FOLLOW_OPTIONAL_ADDITIONAL_MARKER_in_definition_prefix756)



                        # OrderlyJSON.g:68:73: (rng= optional_range )?
                        alt12 = 2
                        LA12_0 = self.input.LA(1)

                        if (LA12_0 == 24) :
                            alt12 = 1
                        if alt12 == 1:
                            # OrderlyJSON.g:68:73: rng= optional_range
                            pass 
                            self._state.following.append(self.FOLLOW_optional_range_in_definition_prefix761)
                            rng = self.optional_range()

                            self._state.following.pop()






                        #action start
                        result = Prefix('array', entries=('e' in locals() and e), more=('o' in locals() and o), rng=('rng' in locals() and rng))
                        #action end


                    elif alt16 == 2:
                        # OrderlyJSON.g:69:7: ( '[' (e= unnamed_entry )? ( ';' )? ']' (rng= optional_range )? )
                        pass 
                        # OrderlyJSON.g:69:7: ( '[' (e= unnamed_entry )? ( ';' )? ']' (rng= optional_range )? )
                        # OrderlyJSON.g:69:8: '[' (e= unnamed_entry )? ( ';' )? ']' (rng= optional_range )?
                        pass 
                        self.match(self.input, 26, self.FOLLOW_26_in_definition_prefix778)
                        # OrderlyJSON.g:69:13: (e= unnamed_entry )?
                        alt13 = 2
                        LA13_0 = self.input.LA(1)

                        if ((18 <= LA13_0 <= 23) or (28 <= LA13_0 <= 30)) :
                            alt13 = 1
                        if alt13 == 1:
                            # OrderlyJSON.g:69:13: e= unnamed_entry
                            pass 
                            self._state.following.append(self.FOLLOW_unnamed_entry_in_definition_prefix782)
                            e = self.unnamed_entry()

                            self._state.following.pop()



                        # OrderlyJSON.g:69:29: ( ';' )?
                        alt14 = 2
                        LA14_0 = self.input.LA(1)

                        if (LA14_0 == 17) :
                            alt14 = 1
                        if alt14 == 1:
                            # OrderlyJSON.g:69:29: ';'
                            pass 
                            self.match(self.input, 17, self.FOLLOW_17_in_definition_prefix785)



                        self.match(self.input, 27, self.FOLLOW_27_in_definition_prefix788)
                        # OrderlyJSON.g:69:41: (rng= optional_range )?
                        alt15 = 2
                        LA15_0 = self.input.LA(1)

                        if (LA15_0 == 24) :
                            alt15 = 1
                        if alt15 == 1:
                            # OrderlyJSON.g:69:41: rng= optional_range
                            pass 
                            self._state.following.append(self.FOLLOW_optional_range_in_definition_prefix792)
                            rng = self.optional_range()

                            self._state.following.pop()









                    #action start
                    result = Prefix('array', entries=('e' in locals() and e), rng=('rng' in locals() and rng))
                    #action end


                elif alt22 == 7:
                    # OrderlyJSON.g:70:6: 'object' '{' (e= named_entries )? ( ';' )? '}' (o= OPTIONAL_ADDITIONAL_MARKER )?
                    pass 
                    self.match(self.input, 28, self.FOLLOW_28_in_definition_prefix844)
                    self.match(self.input, 24, self.FOLLOW_24_in_definition_prefix846)
                    # OrderlyJSON.g:70:20: (e= named_entries )?
                    alt17 = 2
                    LA17_0 = self.input.LA(1)

                    if ((18 <= LA17_0 <= 23) or (28 <= LA17_0 <= 30)) :
                        alt17 = 1
                    if alt17 == 1:
                        # OrderlyJSON.g:70:20: e= named_entries
                        pass 
                        self._state.following.append(self.FOLLOW_named_entries_in_definition_prefix850)
                        e = self.named_entries()

                        self._state.following.pop()



                    # OrderlyJSON.g:70:36: ( ';' )?
                    alt18 = 2
                    LA18_0 = self.input.LA(1)

                    if (LA18_0 == 17) :
                        alt18 = 1
                    if alt18 == 1:
                        # OrderlyJSON.g:70:36: ';'
                        pass 
                        self.match(self.input, 17, self.FOLLOW_17_in_definition_prefix853)



                    self.match(self.input, 25, self.FOLLOW_25_in_definition_prefix856)
                    # OrderlyJSON.g:70:46: (o= OPTIONAL_ADDITIONAL_MARKER )?
                    alt19 = 2
                    LA19_0 = self.input.LA(1)

                    if (LA19_0 == OPTIONAL_ADDITIONAL_MARKER) :
                        alt19 = 1
                    if alt19 == 1:
                        # OrderlyJSON.g:70:46: o= OPTIONAL_ADDITIONAL_MARKER
                        pass 
                        o=self.match(self.input, OPTIONAL_ADDITIONAL_MARKER, self.FOLLOW_OPTIONAL_ADDITIONAL_MARKER_in_definition_prefix860)



                    #action start
                    result = Prefix('object', entries=('e' in locals() and e), more=('o' in locals() and o))
                    #action end


                elif alt22 == 8:
                    # OrderlyJSON.g:71:6: 'union' '{' (e= unnamed_entries )? ( ';' )? '}'
                    pass 
                    self.match(self.input, 29, self.FOLLOW_29_in_definition_prefix890)
                    self.match(self.input, 24, self.FOLLOW_24_in_definition_prefix893)
                    # OrderlyJSON.g:71:20: (e= unnamed_entries )?
                    alt20 = 2
                    LA20_0 = self.input.LA(1)

                    if ((18 <= LA20_0 <= 23) or (28 <= LA20_0 <= 30)) :
                        alt20 = 1
                    if alt20 == 1:
                        # OrderlyJSON.g:71:20: e= unnamed_entries
                        pass 
                        self._state.following.append(self.FOLLOW_unnamed_entries_in_definition_prefix897)
                        e = self.unnamed_entries()

                        self._state.following.pop()



                    # OrderlyJSON.g:71:38: ( ';' )?
                    alt21 = 2
                    LA21_0 = self.input.LA(1)

                    if (LA21_0 == 17) :
                        alt21 = 1
                    if alt21 == 1:
                        # OrderlyJSON.g:71:38: ';'
                        pass 
                        self.match(self.input, 17, self.FOLLOW_17_in_definition_prefix900)



                    self.match(self.input, 25, self.FOLLOW_25_in_definition_prefix903)
                    #action start
                    result = Prefix('union', entries=('e' in locals() and e))
                    #action end



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass
        return result

    # $ANTLR end "definition_prefix"


    # $ANTLR start "string_prefix"
    # OrderlyJSON.g:74:1: string_prefix returns [result] : 'string' (rng= optional_range )? ;
    def string_prefix(self, ):

        result = None

        rng = None


        try:
            try:
                # OrderlyJSON.g:74:32: ( 'string' (rng= optional_range )? )
                # OrderlyJSON.g:74:35: 'string' (rng= optional_range )?
                pass 
                self.match(self.input, 30, self.FOLLOW_30_in_string_prefix969)
                # OrderlyJSON.g:74:47: (rng= optional_range )?
                alt23 = 2
                LA23_0 = self.input.LA(1)

                if (LA23_0 == 24) :
                    alt23 = 1
                if alt23 == 1:
                    # OrderlyJSON.g:74:47: rng= optional_range
                    pass 
                    self._state.following.append(self.FOLLOW_optional_range_in_string_prefix973)
                    rng = self.optional_range()

                    self._state.following.pop()



                #action start
                result = Prefix('string', rng=('rng' in locals() and rng))
                #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass
        return result

    # $ANTLR end "string_prefix"


    # $ANTLR start "string_suffix"
    # OrderlyJSON.g:76:1: string_suffix returns [result] : (regex= OPTIONAL_PERL_REGEX )? suff= definition_suffix ;
    def string_suffix(self, ):

        result = None

        regex = None
        suff = None


        try:
            try:
                # OrderlyJSON.g:76:32: ( (regex= OPTIONAL_PERL_REGEX )? suff= definition_suffix )
                # OrderlyJSON.g:76:35: (regex= OPTIONAL_PERL_REGEX )? suff= definition_suffix
                pass 
                # OrderlyJSON.g:76:40: (regex= OPTIONAL_PERL_REGEX )?
                alt24 = 2
                LA24_0 = self.input.LA(1)

                if (LA24_0 == OPTIONAL_PERL_REGEX) :
                    alt24 = 1
                if alt24 == 1:
                    # OrderlyJSON.g:76:40: regex= OPTIONAL_PERL_REGEX
                    pass 
                    regex=self.match(self.input, OPTIONAL_PERL_REGEX, self.FOLLOW_OPTIONAL_PERL_REGEX_in_string_suffix991)



                self._state.following.append(self.FOLLOW_definition_suffix_in_string_suffix996)
                suff = self.definition_suffix()

                self._state.following.pop()
                #action start
                suff.regex = regex and regex.text; result = suff 
                #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass
        return result

    # $ANTLR end "string_suffix"


    # $ANTLR start "definition_suffix"
    # OrderlyJSON.g:78:1: definition_suffix returns [result] : (enums= optional_enum_values )? (d= optional_default_value )? (requires= optional_requires )? (optional= OPTIONAL_OPTIONAL_MARKER )? (extra= optional_extra_properties )? ;
    def definition_suffix(self, ):

        result = None
